# vlm-finetune

./: .gitignore  README.md  pyproject.toml
examples/: all_models_compare.ipynb  llava.ipynb  llava_eng.ipynb  llava_eng_score.ipynb  qwen.ipynb  qwen3_eng.ipynb  qwen3_eng_score.ipynb  qwen_vs_llava.ipynb
vlm_finetune/: __init__.py  auto.py
vlm_finetune/base/: __init__.py  config.py  dataset.py  image.py  model.py
vlm_finetune/llava/: dataset.py  model.py
vlm_finetune/qwen/: dataset.py  model.py
vlm_finetune/utils/: __init__.py  logger_utils.py
