[tool.poetry]
name = "vlm_finetune"
version = "0.1.0"
description = "Fine-tuning vision-language models with CUDA"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"


peft = "0.17.1"
pillow = "11.3.0"
transformers = "4.57.1"

# PyTorch и torchvision с CUDA 12.1
torch = { version = "2.5.1", source = "pytorch-cu121" }
torchvision = { version = "0.20.1", source = "pytorch-cu121" }

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
ruff = "^0.14.2"
deptry = "^0.23.1"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[tool.ruff]
include = ["*.py", "*.pyi"]
exclude = ["build", "dist", ".venv"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting (аналог isort)
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
]

ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["vlm_finetune"]
combine-as-imports = true
